--- a/demo0/src/main/resources/templates/blog-text.html
+++ b/demo0/src/main/resources/templates/blog-text.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>写博客</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" type="text/css" href="css/daohang.css"/>
-		<link rel="stylesheet" type="text/css" href="lib/editormd/css/editormd.min.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/daohang.css"/>
+		<link rel="stylesheet" type="text/css" href="../lib/editormd/css/editormd.min.css"/>
 
 	</head>
 
@@ -21,13 +21,16 @@
 
 		<div class="g-paded-large g-container">
 			<div class="ui container">
-				<form action="bsave" method="post" class="ui  form">
+				<form action="../bsave" method="post" id="blog-form" th:object="${blog}" class="ui  form">
+					<input type="hidden" name="bpublished">
+					<input type="hidden" name="bid" th:value="*{bid}">
+					<input type="hidden" name="bviews" th:value="*{bviews}">
 					<input type="hidden" name="user.uid" th:value="${session.user.uid}" >
 					<!--标题-->
 					<div class="required field">
 						<div class="ui left labeled input">
 							<div class="ui selection compact teal basic dropdown label">
-								<input type="hidden" value="原创" name="bflag"/>
+								<input type="hidden" value="原创" name="bflag" th:value="*{bflag}"/>
 								<i class="dropdowm icon"></i>
 								<div class="text">原创</div>
 								<div class="menu">
@@ -38,16 +41,16 @@
 								</div>
 
 							</div>
-							<input type="text" name="btitle" placeholder="输入文章标题" />
+							<input type="text" name="btitle" placeholder="输入文章标题" th:value="*{btitle}"/>
 						</div>
 
 					</div>
 					<!--博客内容-->
 
-					<div class="field">
+					<div class="required field">
 
 						<div id="md-content" style="z-index: 1 !important;">
-							<textarea placeholder="博客内容"  name="bcontent" style="display:none;">
+							<textarea placeholder="博客内容"  name="bcontent" style="display:none;" th:text="*{bcontent}">
 </textarea>
 						</div>
 					</div>
@@ -57,12 +60,12 @@
 							<div class="ui left labeled input">
 								<label class="ui compact teal basic label">分类</label>
 								<div class="ui fluid selection dropdown">
-									<input type="hidden" name="blogType"/>
+									<input type="hidden" name="blogType.tid" th:value="*{blogType}!=null ? *{blogType.tid}"/>
 									<i class="dropdowm icon"></i>
 									<div class="default text">分类</div>
 									<div class="menu">
-										<div class="item" data-value="1">java</div>
-										<div class="item" data-value="2">c#</div>
+										<div class="item" th:each="type : ${typeall}" data-value="0" th:data-value="${type.tid}" th:text="${type.tname}"></div>
+
 									</div>
 								</div>
 							</div>
@@ -71,13 +74,12 @@
 						<div class="field">
 							<div class="ui left labeled input">
 								<label class="ui compact teal basic label">标签</label>
-								<div class="ui fluid selection dropdown">
-									<input type="hidden" name="" />
+								<div class="ui fluid selection multiple search dropdown">
+									<input type="hidden" name="tagIds" th:value="*{tagIds}"/>
 									<i class="dropdowm icon"></i>
 									<div class="default text">标签</div>
 									<div class="menu">
-										<div class="item" data-value="1">java</div>
-										<div class="item" data-value="1">c#</div>
+										<div class="item" th:each="tag : ${tagall}" data-value="0" th:data-value="${tag.tgid}" th:text="${tag.tgname}"></div>
 									</div>
 								</div>
 							</div>
@@ -90,7 +92,7 @@
 					<div class="field">
 						<div class="ui left labeled input">
 							<label class="ui teal basic label">首图</label>
-							<input type="text" name="bfristImg" placeholder="首图引用地址" />
+							<input type="text" name="bfristImg" placeholder="首图引用地址" th:value="*{bfristImg}"/>
 
 						</div>
 
@@ -101,26 +103,26 @@
 
 						<div class="field">
 							<div class="ui checkbox">
-								<input type="checkbox" id="tu" name="tu" class="hidden"/>
-								<label for="tu" class="g-white">首图</label>
+								<input type="checkbox" id="bdofristImg" name="bdofristImg" class="hidden" th:checked="*{bdofristImg}"/>
+								<label for="bdofristImg" class="g-white">首图</label>
 							</div>
 						</div>
 						<div class="field">
 							<div class="ui checkbox">
-								<input type="checkbox" id="shengming" name="bshareStarement" class="hidden"/>
-								<label for="shengming" class="g-white">转载声明</label>
+								<input type="checkbox" id="bshareStarement" name="bshareStarement" class="hidden" th:checked="*{bshareStarement}"/>
+								<label for="bshareStarement" class="g-white">转载声明</label>
 							</div>
 						</div>
 						<div class="field">
 							<div class="ui checkbox">
-								<input type="checkbox" id="pay" name="bdopay" class="hidden"/>
-								<label for="pay" class="g-white">打赏</label>
+								<input type="checkbox" id="bdopay" name="bdopay" class="hidden" th:checked="*{bdopay}"/>
+								<label for="bdopay" class="g-white">打赏</label>
 							</div>
 						</div>
 						<div class="field">
 							<div class="ui checkbox">
-								<input type="checkbox" id="comment" name="bcommentabled" class="hidden"/>
-								<label for="comment" class="g-white">评论</label>
+								<input type="checkbox" id="bcommentabled" name="bcommentabled" class="hidden"/>
+								<label for="bcommentabled" class="g-white">评论</label>
 							</div>
 						</div>
 
@@ -129,8 +131,8 @@
 
 					<div class="ui right aligned container">
 						<button type="button" class="ui button" onclick="window.history.go(-1)">返回</button>
-						<button type="button" class="ui teal button">保存</button>
-						<button class="ui red button" >发布</button>
+						<button type="button" id="save-btn" class="ui teal button">保存</button>
+						<button type="button" id="publish-btn" class="ui red button" >发布</button>
 
 
 					</div>
@@ -146,7 +148,7 @@
 		</div>
 		<div th:replace="botton :: html"></div>
 
-		<script src="lib/editormd/editormd.min.js"></script>
+		<script src="../lib/editormd/editormd.min.js"></script>
 
 
 
@@ -184,7 +186,18 @@
             prompt : '请输入博客内容'
           }
         ]
-    }
+    },
+        blogType :
+            {
+                identifier  : 'blogType.tid',
+                rules : [
+                    {
+                        type   : 'empty',
+                        prompt : '请输入博客分类'
+                    }
+                ]
+            }
+
 
 
     }
@@ -200,7 +213,7 @@ var contentEditor;
                     width   : "100%",
                     height  : 640,
                     syncScrolling : "single",
-                    path    : "lib/editormd/lib/"
+                    path    : "../lib/editormd/lib/"
                 });
 
                 /*
@@ -213,6 +226,18 @@ var contentEditor;
                 });
                 */
             });
+
+
+            $('#save-btn').click(function () {
+				$('[name="bpublished"]').val("0");
+				$('#blog-form').submit();
+
+            })
+        $('#publish-btn').click(function () {
+            $('[name="bpublished"]').val("1");
+            $('#blog-form').submit();
+        })
+
 
 	</script>
 
