--- a/demo0/src/main/resources/templates/blog.html
+++ b/demo0/src/main/resources/templates/blog.html
@@ -31,7 +31,7 @@
 							<div class="thirteen wide column">
 						<div class="ui  horizontal link list">
 												<div class="item">
-													<img src="static/img/3.jpg" alt="" class="ui avatar image" />
+													<img src="../img/3.jpg" alt="" class="ui avatar image" />
 													<div class="content"><a href="#"class="header">captainGJH</a></div>													
 								                 </div>
 								                    <div class="item"><i class="calendar icon"></i>2020-01-07</div>
