--- a/demo0/src/main/resources/templates/homepage.html
+++ b/demo0/src/main/resources/templates/homepage.html
@@ -27,11 +27,11 @@
 				
 				<div class="ui  teal attached segments">
 					<div class="ui segment">
-								<a href="homepage.html" class="g-blak g-text-thin">个人资料</a>
+								<a href="#" class="g-blak g-text-thin">个人资料</a>
 								
 							</div>
 							<div class="ui segment">
-								<a href="mind.html"  class="g-blak g-text-thin">我的博客</a>
+								<a href="../blogget"  class="g-blak g-text-thin">我的博客</a>
 								
 							</div>
 							<div class="ui segment">
@@ -72,7 +72,7 @@
 								
 									<div class="five wide column center aligned">
 									<a href="#" target="_blank">
-										<img src="img/3.jpg" alt=""  style="width: 200px; height: 150px;" class="ui container"/>
+										<img  th:src="@{/upload/{img}(img=${session.user.getUheadimg()})}" alt=""  style="width: 200px; height: 150px;" class="ui container"/>
 									</a>
 									<div class="content"><a href="#"  class="header myhead">更改头像</a></div>
 									
@@ -87,28 +87,28 @@
 							
 							<div class="ui two column grid">
 								<div class="column">
-									<p class="g-gray">ID：booleangjh</p>
+									<p class="g-gray">ID：<label th:text="${session.user.getUusername()}"></label></p>
 								</div>
 								<div class="right aligned column">
-									<div class="content"><a href="#" class="header">个人主页></a></div>	
+									<div class="content"><a th:href="@{youindex/{uid}(uid=${session.user.getUid()})}" class="header">个人主页></a></div>
 								</div>
 							</div>
 
-									<p class="g-text">关注：0  &nbsp;&nbsp; 粉丝: 0 </p>
+									<p class="g-text">关注：<label th:text="${myFans}"></label>  &nbsp;&nbsp; 粉丝: <label th:text="${myFollow}"></label> </p>
 
 									</div>
 									<div class="ui padded vertical segment g-paded-large"> 
 									<div class="ui grid">
 										<div class="thirteen wide column">
 												
-										<p>昵称：照亮一纸寂寞</p>
-										<p>实名：郭建辉</p>
-											<p>性别：男</p>
-										<p>生日：</p>
+										<p>昵称：<label th:text="${session.user.getUnickname()}"></label></p>
+										<p>实名：<label th:text="${session.user.getUname()}"></label></p>
+											<p>性别：<label th:text="${session.user.getUsix()}"></label></p>
+										<p>生日：<label th:text="${session.user.getUbirthday()}"></label></p>
 									
-										<p>地区：</p>
-										<p>职位：</p>
-										<p>简介：</p>
+										<p>地区：<label th:text="${session.user.getUlocation()}"></label></p>
+										<p>职位：<label th:text="${session.user.getUposition()}"></label></p>
+										<p>简介：<label th:text="${session.user.getUsoon()}"></label></p>
 																				
 									
 										</div>
@@ -152,16 +152,16 @@
          <div class="header">修改资料</div>
         <div class="content">
         	<p><div class="ui input g-white">
-  昵称：<input type="text" value="照亮一纸寂寞" >
+  昵称：<input type="text" name="unickname" th:value="${session.user.getUnickname()}" >
      </div></p>
         	
         	<p><div class="ui input g-white">
-  实名：<input type="text" >
+  实名：<input type="text" name="uname" th:value="${session.user.getUname()}">
 </div></p>
 
 <p>
         
-    性别：<select class="ui mini dropdown">
+    性别：<select class="ui mini dropdown" name="usix" th:value="${session.user.getUsix()}">
   <option value="1">男</option>
   <option value="0">女</option>
 </select>
@@ -171,7 +171,7 @@
 	<!--更换头像-->
 	<div class="ui myhead1 modal" style="height: 350px; width: 700px;">
 		<h3 class="header">上传头像</h3>
-		<form action="gfile" method="post" class="ui  form" enctype="multipart/form-data">
+		<form action="../douser/gfile" method="post" class="ui  form" enctype="multipart/form-data">
 		<div class="content">
 
 			<div class="head-img" style="text-align: center;">
@@ -214,6 +214,7 @@
 
 		</div>
 	</div>
+
 			<script>
 
                $(function () {
@@ -222,7 +223,7 @@
                        $('#img-upload').click();
                    });
 
-                   $('#sc').click(function(){
+                   $('#sc').click(function(){//调用from表单中的submit提交按钮//这边的button就是submit
                        $('#sc1').click();
                    });
                   //参考 https://blog.csdn.net/xl_1803/article/details/82838408
@@ -256,6 +257,7 @@
                                }
                                //打开另外显示图片的窗口
                                $('.ui.myhead2.modal').modal('show');
+
 
 						   }
 
