--- a/demo0/src/main/resources/templates/your-index.html
+++ b/demo0/src/main/resources/templates/your-index.html
@@ -7,13 +7,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>个人空间</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" type="text/css" href="css/daohang.css"/>
+		<LINK id="css" href="../css/daohang.css" type="text/css" rel="stylesheet" />
 	</head>
-	
+	<div th:replace="head :: html"></div>
 	
 	<body>
 
-	<div th:replace="head :: html"></div>
+
 			
 			
 			<!--中间内容-->
@@ -26,8 +26,8 @@
 					<div class="ui segment">
 						<div class="ui  stackable  grid">
 						<div class="four wide column center aligned">
-							<div class="ui image">								
-								<img class="ui circular small image" src="img/3.jpg">
+							<div class="ui img g-box">
+								<img class="ui g-box-img image" th:src="@{/upload/{img}(img=${myuser.uheadimg})}">
 							</div>
 							<div class="ui content"><a href="#"class="header">隐私设置</a></div>
 							
@@ -36,11 +36,12 @@
 						<div class="twelve wide column">
 							<div class="ui grid">
 								<div class="eleven wide column">
-									<h1>舰长哥哥</h1>
+									<h1 th:text="${myuser.unickname}"></h1>
 									<p class="g-gray">尚未进行身份认证 </p>
 									<p class="g-gray">暂无相关简介  <a href="#">去添加</a></p>	
 								</div>
-								<div class="five wide column">
+
+								<div class="five wide column" th:if="${myuser.uid} ne ${lid}">
 									   <button class="ui red mini button">关注</button>
 											<button class="ui teal basic mini button">私信</button>		
 								</div>
@@ -84,12 +85,12 @@
 					
 					<div class="ui two column grid">
 						<div class="column">
-							<a th:href="@{youindex(page=${yblogList.number}-1)}" class="ui mini teal basic button">上一页</a>
+							<a th:href="@{${myuser.uid}(page=${yblogList.number}-1)}" class="ui mini teal basic button">上一页</a>
 							
 						</div>
 						<div class="right aligned column">
 
-							<a th:href="@{youindex(page=${yblogList.number}+1)}" class="ui mini teal basic button">下一页</a>
+							<a th:href="@{${myuser.uid}(page=${yblogList.number}+1)}" class="ui mini teal basic button">下一页</a>
 						</div>
 		
 					</div>	
@@ -103,7 +104,7 @@
 						
 								<div class="ui menu">
 							<div class="ui attached center aligned segment">
-								<a th:text="${myFollow}"></a>
+								<a th:href="@{/follow/{uid}(uid=${myuser.uid})}" th:text="${myFollow}"></a>
 								<p>他的关注</p>
 								
 							</div>
@@ -122,7 +123,7 @@
 						<!--二维码-->
 					<h4 class="ui horizontal divider header g-white">扫码关注我</h4>
 					<div class="ui card centered" style="width: 10em;">
-						<img src="img/g.jpg" alt="" class="ui rounded image" >
+						<img src="../img/g.jpg" alt="" class="ui rounded image" >
 					</div>
 					</div>
 			</div>
@@ -134,12 +135,8 @@
 		</div>
 
 
-
-
-
-
-			<div th:replace="botton :: html"></div>
 		
 
 	</body>
+	<div th:replace="botton :: html"></div>
 </html>
