--- a/demo0/src/main/resources/templates/blog.html
+++ b/demo0/src/main/resources/templates/blog.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>详情页</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" type="text/css" href="css/daohang.css"/>
-		<link rel="stylesheet" type="text/css" href="css/typo.css"/>
-		<link rel="stylesheet" type="text/css" href="lib/prism/prism.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/daohang.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/typo.css"/>
+		<link rel="stylesheet" type="text/css" href="../lib/prism/prism.css"/>
 	
 	</head>
 	
@@ -31,15 +31,20 @@
 							<div class="thirteen wide column">
 						<div class="ui  horizontal link list">
 												<div class="item">
-													<img src="../img/3.jpg" alt="" class="ui avatar image" />
-													<div class="content"><a href="#"class="header">captainGJH</a></div>													
+													<img th:src="@{/upload/{img}(img=${blog.user.uheadimg})}" alt="" class="ui avatar image" />
+													<div class="content"><a href="#"class="header" th:text="${blog.user.unickname}"></a></div>
 								                 </div>
-								                    <div class="item"><i class="calendar icon"></i>2020-01-07</div>
-													<div class="item"><i class="eye icon"></i>1000</div>
+								                    <div class="item"><i class="calendar icon"></i><span th:text="${#dates.format(blog.bupdateTime,'yyyy-MM-dd')}"></span></div>
+													<div class="item"><i class="eye icon"></i><span th:text="${blog.bviews}"></span></div>
 											</div>	
 											</div>
 											<div class="three wide column">
-												<button class="ui red mini button">关注</button>
+                                                <button class="ui followme red mini button" type="button">
+                                                    <span class="sp" th:if="${session.isfollow} eq null">关注</span>
+                                                    <span class="sp" th:if="${session.isfollow} eq false">关注</span>
+                                                    <span class="sp" th:if="${session.isfollow} eq true">已关注</span>
+                                                    <label id="lid"></label>
+                                                </button>
 											<button class="ui teal basic mini button">私信</button>	
 											</div>
 							
@@ -49,15 +54,20 @@
 					<!--图片-->
 					<div class="ui attached segment">
 				
-						<img src="https://unsplash.it/800/450?image=1005" alt="" class="ui fluid rounded image" />
+						<img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.bfristImg}}" alt="" class="ui fluid rounded image" />
 					</div>
 					<!--内容-->
 					<div class="ui attached segment">
 						<div class="ui right aligned basic segment">
-							<div class="ui violet basic label">原创</div>	
+							<div class="ui violet basic label" th:text="${blog.bflag}">原创</div>
 						</div>
-						<pre><code class="language-css">p { color: red }</code></pre>
-						<div class="g-padded-jl-phone typo typo-selection" id="container">
+                        <h2 class="ui center aligned header" th:text="${blog.btitle}"></h2>
+                        <br>
+
+
+
+						<div class="g-padded-jl-phone typo typo-selection" id="container" th:utext="${blog.bcontent}">
+                            <pre><code class="language-css">p { color: red }</code></pre>
 						<h2 id="tagline" class="serif">一致化浏览器排版效果，构建最适合中文阅读的网页排版</h2>
 
 <ol id="table" class="ui table">
@@ -446,11 +456,11 @@ h5,h6{font-size:1em;}
 							<div class="ui orange basic label">
 								<div class="ui images" style="font-size: inherit !important">
 							<div class="image">
-					<img src="img/g.jpg" class="ui rounded bordered image" alt=""style="width: 110px;" />
+					<img src="../img/g.jpg" class="ui rounded bordered image" alt=""style="width: 110px;" />
 					<div>支付宝</div>
 				          </div>
 				          <div class="image">
-					<img src="img/g.jpg" class="ui rounded bordered image" alt=""style="width: 110px;" />
+					<img src="../img/g.jpg" class="ui rounded bordered image" alt=""style="width: 110px;" />
 					<div>微信</div>
 				          </div>
 							</div></div>
@@ -464,15 +474,15 @@ h5,h6{font-size:1em;}
 						<div class="ui middle aligned grid">
 							<div class="eleven wide column">
 								<ui  style="list-style-type: none;">
-									<li>作者：captainGJH（联系作者）</li>
-									<li>发布时间：2020 1/8</li>
+									<li>作者：<span th:text="${blog.user.unickname}">captainGJH</span>（联系作者）</li>
+									<li>发布时间：<span th:text="${#dates.format(blog.bupdateTime,'yyyy-MM-dd')}">9999-9-9</span></li>
 									<li>版权说明：告知原创</li>
 									<li>公众号转载：扫描二维码关注公众号</li>
 									
 								</ui>
 							</div>
 							<div class="five wide column">
-								<img src="img/g.jpg" class="ui rounded bordered image" alt=""style="width: 110px;" />
+								<img src="../img/g.jpg" class="ui rounded bordered image" alt=""style="width: 110px;" />
 							</div>
 							
 						</div>
@@ -583,7 +593,7 @@ h5,h6{font-size:1em;}
 		
 		<!--显示微信二维码-->
 	  <div class="ui ewm1 flowing popup transition hidden" style="width: 120px">
-<img src="img/g.jpg" class="ui rounded image" alt=""style="width: 110px;"/>
+<img src="../img/g.jpg" class="ui rounded image" alt=""style="width: 110px;"/>
   
       </div>
 		
@@ -595,5 +605,27 @@ h5,h6{font-size:1em;}
 
     <div th:replace="botton :: html"></div>
 	</body>
+    <script>//关注按钮部分
+    $('.followme').click(function () {
+        var id=[[${blog.user.uid}]];
+        $.get("../Addfollow",{followId:id},function (obj) {
+            if(obj=="0"){
+                alert("请登录账号");
+                return;
+            }
+            if(obj=="1"){
+                $('.sp').empty();
+                $('#lid').html("已关注");
+            }
+            if(obj=="2"){
+                $('.sp').empty();
+                $('#lid').html("关注");
+            }
+        })
+
+    })
+
+
+    </script>
 
 </html>
